<resources>
    <string name="app_name">FoodAppy</string>
    <string name="userTxt">Como te llamas?</string>
    <string name="btnSiguiente">Siguiente</string>
    <string name="btneExit">Salir</string>
    <string name="queQuieres">Que vas a comer hoy?</string>
    <string name="sushi">Sushi Premium</string>
    <string name="pizza">Pizza a la Piedra</string>
    <string name="sandwich">Hamburgesas</string>
    <string name="pedir">Ver Más</string>
    <string name="ratingBarDescription">Valoración del producto</string>
    <string name="btnVolver">Volver</string>
    <string name="valoraciones">Lo que opinan nuestros clientes</string>
    <string name="TiempoEntrega">Tiempo de Entrega:</string>
    <string name="HorarioAtencion">Hoario de Atención</string>

    <string name="Direccion">Direccion</string>


</resources>