<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/red"
    >

    <TextView
        android:id="@+id/txt1"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintVertical_bias="0.02"
        android:textSize="60sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt2"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintVertical_bias="0.02"
        android:textSize="60sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt1" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/divTxt"
        android:textColorHint="@color/black"
        app:errorTextColor="@color/black"
        android:outlineAmbientShadowColor="@color/white"
        app:boxStrokeColor="@color/black"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt2">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/userTxt"
            android:textColorLink="@color/black"
            android:textSize="20sp"
            android:background="@color/whitePng"
            android:textColor="@color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/userTxt" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/nextBtm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnSiguiente"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/black"
        android:backgroundTint="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/divTxt" />

    <Button
        android:id="@+id/exitBtm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btneExit"
        android:textColor="@color/black"
        android:backgroundTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nextBtm" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="142dp"
        android:layout_height="195dp"
        app:layout_constraintBottom_toTopOf="@+id/divTxt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt2"
        app:srcCompat="@drawable/logofoodappy" />
</androidx.constraintlayout.widget.ConstraintLayout>